--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
 			<version>0.0.3-SNAPSHOT</version>
 		</dependency>
 
+		<dependency>
+			<groupId>pt.uminho.ceb.biosystems.mew</groupId>
+			<artifactId>mew-solvers-cplex</artifactId>
+			<version>0.0.2-SNAPSHOT</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
